src/test/ui/in-band-lifetimes/impl/dyn-trait.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/dyn-trait.rs:34:16
   |
LL |     static_val(x); //~ ERROR cannot infer
   |                ^
   |
note: first, the lifetime cannot outlive the lifetime 'a as defined on the function body at 33:1...
  --> $DIR/dyn-trait.rs:33:1
   |
LL | fn with_dyn_debug_static<'a>(x: Box<dyn Debug + 'a>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...so that the expression is assignable:
           expected std::boxed::Box<std::fmt::Debug>
              found std::boxed::Box<std::fmt::Debug + 'a>
   = note: but, the lifetime must be valid for the static lifetime...
   = note: ...so that the types are compatible:
           expected StaticTrait
              found StaticTrait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
